generator/preprocessed/raylib.h


typedef struct Vector2 {
    float x;
    float y;
} Vector2;
typedef struct Color {
    unsigned char r;
    unsigned char g;
    unsigned char b;
    unsigned char a;
} Color;
typedef struct Rectangle {
    float x;
    float y;
    float width;
    float height;
} Rectangle;
typedef struct Texture2D {
    unsigned int id;        
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Texture2D;
typedef struct Camera3D {
    Vector3 position;       
    Vector3 target;         
    Vector3 up;             
    float fovy;             
    int type;               
} Camera3D;
#define Camera Camera3D     
typedef enum {
    KEY_APOSTROPHE      = 39,
    KEY_COMMA           = 44,
    KEY_MINUS           = 45,
    KEY_PERIOD          = 46,
    KEY_SLASH           = 47,
    KEY_ZERO            = 48,
    KEY_ONE             = 49,
    KEY_TWO             = 50,
    KEY_THREE           = 51,
    KEY_FOUR            = 52,
    KEY_FIVE            = 53,
    KEY_SIX             = 54,
    KEY_SEVEN           = 55,
    KEY_EIGHT           = 56,
    KEY_NINE            = 57,
    KEY_SEMICOLON       = 59,
    KEY_EQUAL           = 61,
    KEY_A               = 65,
    KEY_B               = 66,
    KEY_C               = 67,
    KEY_D               = 68,
    KEY_E               = 69,
    KEY_F               = 70,
    KEY_G               = 71,
    KEY_H               = 72,
    KEY_I               = 73,
    KEY_J               = 74,
    KEY_K               = 75,
    KEY_L               = 76,
    KEY_M               = 77,
    KEY_N               = 78,
    KEY_O               = 79,
    KEY_P               = 80,
    KEY_Q               = 81,
    KEY_R               = 82,
    KEY_S               = 83,
    KEY_T               = 84,
    KEY_U               = 85,
    KEY_V               = 86,
    KEY_W               = 87,
    KEY_X               = 88,
    KEY_Y               = 89,
    KEY_Z               = 90,
    KEY_SPACE           = 32,
    KEY_ESCAPE          = 256,
    KEY_ENTER           = 257,
    KEY_TAB             = 258,
    KEY_BACKSPACE       = 259,
    KEY_INSERT          = 260,
    KEY_DELETE          = 261,
    KEY_RIGHT           = 262,
    KEY_LEFT            = 263,
    KEY_DOWN            = 264,
    KEY_UP              = 265,
    KEY_PAGE_UP         = 266,
    KEY_PAGE_DOWN       = 267,
    KEY_HOME            = 268,
    KEY_END             = 269,
    KEY_CAPS_LOCK       = 280,
    KEY_SCROLL_LOCK     = 281,
    KEY_NUM_LOCK        = 282,
    KEY_PRINT_SCREEN    = 283,
    KEY_PAUSE           = 284,
    KEY_F1              = 290,
    KEY_F2              = 291,
    KEY_F3              = 292,
    KEY_F4              = 293,
    KEY_F5              = 294,
    KEY_F6              = 295,
    KEY_F7              = 296,
    KEY_F8              = 297,
    KEY_F9              = 298,
    KEY_F10             = 299,
    KEY_F11             = 300,
    KEY_F12             = 301,
    KEY_LEFT_SHIFT      = 340,
    KEY_LEFT_CONTROL    = 341,
    KEY_LEFT_ALT        = 342,
    KEY_LEFT_SUPER      = 343,
    KEY_RIGHT_SHIFT     = 344,
    KEY_RIGHT_CONTROL   = 345,
    KEY_RIGHT_ALT       = 346,
    KEY_RIGHT_SUPER     = 347,
    KEY_KB_MENU         = 348,
    KEY_LEFT_BRACKET    = 91,
    KEY_BACKSLASH       = 92,
    KEY_RIGHT_BRACKET   = 93,
    KEY_GRAVE           = 96,
    KEY_KP_0            = 320,
    KEY_KP_1            = 321,
    KEY_KP_2            = 322,
    KEY_KP_3            = 323,
    KEY_KP_4            = 324,
    KEY_KP_5            = 325,
    KEY_KP_6            = 326,
    KEY_KP_7            = 327,
    KEY_KP_8            = 328,
    KEY_KP_9            = 329,
    KEY_KP_DECIMAL      = 330,
    KEY_KP_DIVIDE       = 331,
    KEY_KP_MULTIPLY     = 332,
    KEY_KP_SUBTRACT     = 333,
    KEY_KP_ADD          = 334,
    KEY_KP_ENTER        = 335,
    KEY_KP_EQUAL        = 336
} KeyboardKey;
typedef enum {
    MOUSE_LEFT_BUTTON   = 0,
    MOUSE_RIGHT_BUTTON  = 1,
    MOUSE_MIDDLE_BUTTON = 2
} MouseButton;
typedef enum {
    GAMEPAD_PLAYER1     = 0,
    GAMEPAD_PLAYER2     = 1,
    GAMEPAD_PLAYER3     = 2,
    GAMEPAD_PLAYER4     = 3
} GamepadNumber;
typedef enum {
    CAMERA_CUSTOM = 0,
    CAMERA_FREE,
    CAMERA_ORBITAL,
    CAMERA_FIRST_PERSON,
    CAMERA_THIRD_PERSON
} CameraMode;
RLAPI bool IsFileExtension(const char *fileName, const char *ext);
RLAPI const char *GetExtension(const char *fileName);             
RLAPI const char *GetFileName(const char *filePath);              
RLAPI const char *GetFileNameWithoutExt(const char *filePath);    
RLAPI const char *GetDirectoryPath(const char *fileName);         
RLAPI const char *GetWorkingDirectory(void);                      
RLAPI char **GetDirectoryFiles(const char *dirPath, int *count);  
RLAPI void ClearDirectoryFiles(void);                             
RLAPI bool ChangeDirectory(const char *dir);                      
RLAPI bool IsFileDropped(void);                                   
RLAPI char **GetDroppedFiles(int *count);                         
RLAPI void ClearDroppedFiles(void);                               
RLAPI long GetFileModTime(const char *fileName);                  
RLAPI void StorageSaveValue(int position, int value);             
RLAPI int StorageLoadValue(int position);                         
RLAPI void OpenURL(const char *url);                              
RLAPI bool IsKeyPressed(int key);                             
RLAPI bool IsKeyDown(int key);                                
RLAPI bool IsKeyReleased(int key);                            
RLAPI bool IsKeyUp(int key);                                  
RLAPI int GetKeyPressed(void);                                
RLAPI void SetExitKey(int key);                               
RLAPI bool IsGamepadAvailable(int gamepad);                   
RLAPI bool IsGamepadName(int gamepad, const char *name);      
RLAPI const char *GetGamepadName(int gamepad);                
RLAPI bool IsGamepadButtonPressed(int gamepad, int button);   
RLAPI bool IsGamepadButtonDown(int gamepad, int button);      
RLAPI bool IsGamepadButtonReleased(int gamepad, int button);  
RLAPI bool IsGamepadButtonUp(int gamepad, int button);        
RLAPI int GetGamepadButtonPressed(void);                      
RLAPI int GetGamepadAxisCount(int gamepad);                   
RLAPI float GetGamepadAxisMovement(int gamepad, int axis);    
RLAPI bool IsMouseButtonPressed(int button);                  
RLAPI bool IsMouseButtonDown(int button);                     
RLAPI bool IsMouseButtonReleased(int button);                 
RLAPI bool IsMouseButtonUp(int button);                       
RLAPI int GetMouseX(void);                                    
RLAPI int GetMouseY(void);                                    
RLAPI Vector2 GetMousePosition(void);                         
RLAPI void SetMousePosition(int x, int y);                    
RLAPI void SetMouseOffset(int offsetX, int offsetY);          
RLAPI void SetMouseScale(float scaleX, float scaleY);         
RLAPI int GetMouseWheelMove(void);                            
RLAPI int GetTouchX(void);                                    
RLAPI int GetTouchY(void);                                    
RLAPI Vector2 GetTouchPosition(int index);                    
RLAPI void SetGesturesEnabled(unsigned int gestureFlags);     
RLAPI bool IsGestureDetected(int gesture);                    
RLAPI int GetGestureDetected(void);                           
RLAPI int GetTouchPointsCount(void);                          
RLAPI float GetGestureHoldDuration(void);                     
RLAPI Vector2 GetGestureDragVector(void);                     
RLAPI float GetGestureDragAngle(void);                        
RLAPI Vector2 GetGesturePinchVector(void);                    
RLAPI float GetGesturePinchAngle(void);                       
RLAPI void SetCameraMode(Camera camera, int mode);                
RLAPI void UpdateCamera(Camera *camera);                          
RLAPI void SetCameraPanControl(int panKey);                       
RLAPI void SetCameraAltControl(int altKey);                       
RLAPI void SetCameraSmoothZoomControl(int szKey);                 
RLAPI void SetCameraMoveControls(int frontKey, int backKey, int rightKey, int leftKey, int upKey, int downKey); 
RLAPI void DrawPixel(int posX, int posY, Color color);                                                   
RLAPI void DrawPixelV(Vector2 position, Color color);                                                    
RLAPI void DrawLine(int startPosX, int startPosY, int endPosX, int endPosY, Color color);                
RLAPI void DrawLineV(Vector2 startPos, Vector2 endPos, Color color);                                     
RLAPI void DrawLineEx(Vector2 startPos, Vector2 endPos, float thick, Color color);                       
RLAPI void DrawLineBezier(Vector2 startPos, Vector2 endPos, float thick, Color color);                   
RLAPI void DrawCircle(int centerX, int centerY, float radius, Color color);                              
RLAPI void DrawCircleSector(Vector2 center, float radius, int startAngle, int endAngle, Color color);    
RLAPI void DrawCircleGradient(int centerX, int centerY, float radius, Color color1, Color color2);       
RLAPI void DrawCircleV(Vector2 center, float radius, Color color);                                       
RLAPI void DrawCircleLines(int centerX, int centerY, float radius, Color color);                         
RLAPI void DrawRectangle(int posX, int posY, int width, int height, Color color);                        
RLAPI void DrawRectangleV(Vector2 position, Vector2 size, Color color);                                  
RLAPI void DrawRectangleRec(Rectangle rec, Color color);                                                 
RLAPI void DrawRectanglePro(Rectangle rec, Vector2 origin, float rotation, Color color);                 
RLAPI void DrawRectangleGradientV(int posX, int posY, int width, int height, Color color1, Color color2);
RLAPI void DrawRectangleGradientH(int posX, int posY, int width, int height, Color color1, Color color2);
RLAPI void DrawRectangleGradientEx(Rectangle rec, Color col1, Color col2, Color col3, Color col4);       
RLAPI void DrawRectangleLines(int posX, int posY, int width, int height, Color color);                   
RLAPI void DrawRectangleLinesEx(Rectangle rec, int lineThick, Color color);                              
RLAPI void DrawTriangle(Vector2 v1, Vector2 v2, Vector2 v3, Color color);                                
RLAPI void DrawTriangleLines(Vector2 v1, Vector2 v2, Vector2 v3, Color color);                           
RLAPI void DrawPoly(Vector2 center, int sides, float radius, float rotation, Color color);               
RLAPI void DrawPolyEx(Vector2 *points, int numPoints, Color color);                                      
RLAPI void DrawPolyExLines(Vector2 *points, int numPoints, Color color);                                 
RLAPI void SetShapesTexture(Texture2D texture, Rectangle source);                                        
RLAPI bool CheckCollisionRecs(Rectangle rec1, Rectangle rec2);                                           
RLAPI bool CheckCollisionCircles(Vector2 center1, float radius1, Vector2 center2, float radius2);        
RLAPI bool CheckCollisionCircleRec(Vector2 center, float radius, Rectangle rec);                         
RLAPI Rectangle GetCollisionRec(Rectangle rec1, Rectangle rec2);                                         
RLAPI bool CheckCollisionPointRec(Vector2 point, Rectangle rec);                                         